z-index fix

--- a/style.css
+++ b/style.css
@@ -237,7 +237,7 @@ a.single-about,
 }
 .welcome-area{
 	position: relative;
-	z-index: 1;
+	z-index: 2;
   padding-top: 80px;
 }
 
